@@ -1,3 +1,11 @@
+*** 20011204_10 by androsyn
+Cleaned up some stuff.  Got rid of the leaking dns queries as well.
+
+
+*** 20011204_9 by androsyn
+Change malloc to MyMalloc
+
+
 *** 20011204_8 by androsyn
 Added the 0.0.0.0 to 127.0.0.1 hack
 
